🐛 fix(high contrast): high contrast styles improvement for components.

--- a/packages/assets/css/src/scss/_components/_drawer/_elements/_drawer-footer.scss
+++ b/packages/assets/css/src/scss/_components/_drawer/_elements/_drawer-footer.scss
@@ -21,4 +21,14 @@
 			}
 		}
 	}
+
+	// DIR: Left to right.
+	// THEME: Dark.
+	@include sui-class($rtl: false, $theme: dark) {
+		@include block($block) {
+			@include element(footer) {
+				border-color: $color-extended-neutral-0;
+			}
+		}
+	}
 }
