--- a/packages/assets/css/src/scss/_components/_drawer/_modifiers/_drawer-positions.scss
+++ b/packages/assets/css/src/scss/_components/_drawer/_modifiers/_drawer-positions.scss
@@ -14,8 +14,8 @@
 		@include block($block) {
 			@include modifier(left) {
 				@include modifies-element(inner) {
-					border-left: 0;
-					border-right: $border-width-sm solid $color-extended-neutral-80;
+					border-left-width: 0;
+					border-right-width: $border-width-sm;
 					transform: translateX(-100%);
 				}
 			}
@@ -41,8 +41,8 @@
 
 			@include modifier(left) {
 				@include modifies-element(inner) {
-					border-right: 0;
-					border-left: $border-width-sm solid $color-extended-neutral-80;
+					border-right-width: 0;
+					border-left-width: $border-width-sm;
 					transform: translateX(100%);
 				}
 			}
@@ -51,8 +51,8 @@
 				left: 0;
 				right: auto;
 				@include modifies-element(inner) {
-					border-left: 0;
-					border-right: $border-width-sm solid $color-extended-neutral-80;
+					border-left-width: 0;
+					border-right-width: $border-width-sm;
 					left: 0;
 					right: auto;
 				}
